--- a/css/tablet.css
+++ b/css/tablet.css
@@ -602,18 +602,18 @@ margin: 0 auto;
 .footer{
  height:300px;
  background-color: black;
- position:absolute;
 }
 
 .footercontent{
- float:left;
+ display: inline-block;
+
  text-align:left;
  color:white;
- display:inline-block;
  margin:19px;
  margin-top: 6%;
  margin-left: 4%;
  width:200px;
+ clear:both;
 }
 
 .footertitle{
@@ -714,30 +714,26 @@ margin: 0 auto;
 }
 
 .fullcontact{
- height:385px;
  background-color: #d27c49;
  margin:0 auto;
  text-align: center;
  padding-top:50px;
+ height:640px;
 }
 
 .textform{
- width:100px;
- text-align:center;
+ width:100%;
 }
 
 .textform h3 {
  margin-bottom:-35px;
- width:500px
  text-align:center;
 }
 
 .container-fullcontact{
- position:inherit;
- width:40%;
+ width:80%;
  text-align:center;
  display:inline-block;
- vertical-align: middle;
 }
 
 .fullform{
@@ -745,18 +741,17 @@ margin: 0 auto;
  font-size:11px;
  color:#a85a2b;
  margin-top:60px;
- display:inline-block;
- text-align:right;
+ text-align:left;
  text-transform: uppercase;
 }
 
 .fullform input{
  border-style:none;
- width:500px;
+ width:100%;
  display: inline-block;
  background-color:#bb6938;
  margin:5px;
- height:40px;
+ height:20px;
  border-radius: 5px;
  padding:5px;
  font-family:'Nunito'
