--- a/css/stablet.css
+++ b/css/stablet.css
@@ -12,8 +12,8 @@ h1{
 
 .section.main h1 {
  color: white;
- font-size: 30px;
- width: 70%;
+ font-size: 25px;
+ width: 65%;
  text-transform: uppercase;
  margin-right: auto;
  margin-left: auto;
@@ -390,7 +390,7 @@ li{
  color:white;
  z-index: 2;
  text-transform: uppercase;
- font-size: 13px;
+ font-size: 11px;
  top:50%;
  transform: rotate(90deg) translateY(50%);
  cursor: pointer;
@@ -543,7 +543,7 @@ li{
  font-style: italic;
  font-size: 16px;
  padding-left: 6.5%;
- top:20%;
+ top:15%;
  width: 6%;
  float: left;
  position:absolute;
@@ -730,7 +730,7 @@ li{
  text-transform: uppercase;
  cursor:pointer;
  line-height: 20px;
- margin-right:200px;
+ margin-right:30px;
 }
 
 .listado #servicio:hover {
@@ -744,33 +744,32 @@ li{
 .showimage {
  vertical-align: middle;
  display: inline-block;
- width:250px;
+ width:110px;
  height:auto;
- margin-right: 150px;
 }
 
 .showcontent {
- vertical-align: middle;
- display: inline-block;
- width:600px;
- height:200px;
+ text-align: left;
+ margin-top: 50px;
+ width:200px;
+ height:auto;
 }
 
 .title{
  font-family:'Montserrat';
  font-weight:700;
  color:white;
- font-size:70px;
+ font-size:30px;
 }
 
 .subtitle {
  font-family:'Montserrat';
  font-weight:700;
  color:white;
- font-size:40px;
+ font-size:20px;
  margin-top: -10px;
  text-transform: uppercase;
- margin-bottom:20px;
+ margin-bottom:0px;
 }
 
 .content {
