--- a/css/stablet.css
+++ b/css/stablet.css
@@ -9,7 +9,7 @@
  }
  .section.main h1 {
   color: white;
-  font-size: 25px;
+  font-size: 38px;
   width: 70%;
   text-transform: uppercase;
   margin-right: auto;
@@ -18,8 +18,8 @@
  }
  .section.mainproceso h1 {
   color: white;
-  font-size: 25px;
-  width: 70%;
+  font-size: 38px;
+  width: 60%;
   text-transform: uppercase;
   margin-right: auto;
   margin-left: auto;
@@ -47,7 +47,7 @@
  }
  h3 {
   font-family: Volkohn;
-  font-size: 12px;
+  font-size: 18px;
   color: #0f1230;
   font-weight: 300;
   font-style: italic;
@@ -77,7 +77,7 @@
  }
  .section.nosotros h5 {
   font-family: Volkohn;
-  font-size: 12px;
+  font-size: 20px;
   color: white;
   font-weight: 300;
   font-style: italic;
@@ -100,7 +100,7 @@
  }
  .section.mainnosotros h1 {
   color: white;
-  font-size: 25px;
+  font-size: 40px;
   width: 50%;
   text-transform: uppercase;
   margin-right: auto;
@@ -111,29 +111,29 @@
   font-family: Montserrat;
   font-weight: 700;
   color: white;
-  font-size: 20px;
+  font-size: 41px;
   margin-top: 55px;
  }
  .section.main {
   background-image: url('../assets/images/main_background.png');
+  background-repeat: no-repeat;
+  background-size: cover;
  }
  .logo {
   position: fixed;
-  width: 100px;
-  top: 35px;
-  left: 15px;
+  top: 25px;
+  left: 40px;
   z-index: 1;
  }
  .menu {
   position: fixed;
   padding: 20px;
   top: 20px;
-  right: 0;
+  right: 20px;
   z-index: 1;
   cursor: pointer;
  }
  .arrow {
-  width:15px;
   position: absolute;
   bottom: 40px;
   right: 50%;
@@ -152,7 +152,7 @@
   font-family: Montserrat;
   font-weight: 700;
   color: #0f1230;
-  font-size: 20px;
+  font-size: 30px;
   text-transform: uppercase;
  }
  .text h3 {
@@ -222,70 +222,72 @@
  }
  .text {
   font-family: 'Nunito';
-  font-size: 11px;
-  margin-top: -28px;
+  font-size: 16px;
  }
  .textnosotros {
   padding: 50px;
   vertical-align: middle;
   font-family: 'Nunito';
-  font-size: 11px;
+  font-size: 16px;
  }
  .textnosotros h1 {
   font-family: 'Montserrat';
-  margin-bottom: -30px;
+  margin-bottom: -40px;
   color: black;
-  font-size: 30px;
- }
- .textnosotros h3 {
-  margin-top:-20px;
+  font-size: 50px;
  }
  .textnosotros h4 {
   font-family: 'Montserrat';
+  margin-bottom: 0px;
   color: black;
-  font-size: 20px;
- }
- .textnosotros p{
-  margin-top:-5px;
+  font-size: 25px;
  }
  .textproceso {
   font-family: 'Nunito';
-  font-size: 11px;
-  margin-top: -20px;
+  font-size: 16px;
+  margin-top: -33px;
  }
  .button {
   text-decoration: none;
   margin-left: auto;
   margin-right: auto;
   background-color: #7f345d;
-  width: 60px;
-  padding: 12px;
+  width: 90px;
+  padding: 25px;
   border-radius: 5px;
   text-align: center;
   color: white;
-  font-size: 9px;
+  font-size: 14px;
   text-transform: uppercase;
   font-family: Montserrat;
   font-weight: 400;
   cursor: pointer;
-  margin-top: -100px;
  }
  .unetebtn {
   text-decoration: none;
   margin-left: auto;
   margin-right: auto;
   background-color: #7f345d;
-  width: 60px;
-  padding: 12px;
+  width: 75px;
+  padding: 18px;
   border-radius: 5px;
   text-align: center;
   color: white;
-  font-size: 9px;
+  font-size: 11px;
   text-transform: uppercase;
   font-family: Montserrat;
   font-weight: 400;
   cursor: pointer;
-  margin-top: -50px;
+  margin-top: -27px;
+ }
+ .uscontainer {
+  display: table;
+ }
+ .contentleft {
+  float: none;
+ }
+ .contentright {
+  float: none;
  }
  a {
   text-decoration: none;
@@ -304,12 +306,12 @@
   color: white;
   border: 2px solid white;
   border-radius: 5px;
-  font-size: 9px;
+  font-size: 13px;
   text-transform: uppercase;
   font-family: Montserrat;
   font-weight: 400;
-  padding: 12px;
-  width: 60px;
+  padding: 20px;
+  width: 93px;
   cursor: pointer;
  }
  .buttonwhite:hover {
@@ -328,7 +330,7 @@
   background-image: url('../img/nosotroscontent-img.png');
  }
  .center {
-  width: 75%;
+  width: 72%;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
@@ -353,13 +355,13 @@
   z-index: 3;
  }
  .contactBtn {
-  right: -11px;
+  right: 0;
   display: none;
   position: absolute;
   color: white;
   z-index: 2;
   text-transform: uppercase;
-  font-size: 10px;
+  font-size: 11px;
   top: 50%;
   transform: rotate(90deg) translateY(50%);
   cursor: pointer;
@@ -405,30 +407,27 @@
  }
  .ilust {
   text-align: center;
-  width: 100px;
+  width: 180px;
   display: block;
   margin: 0 auto;
  }
- .ilustindex{
+ .ilustindex {
   width: 100px;
   display: inline-block;
  }
- .stepcontainer{
+ .stepcontainer {
   display: inline-block;
  }
- .uscontainer{
-  display: table;
+ .contentleft {
+  float: left;
  }
- .contentleft{
-  float:none;
- }
- .contentright{
-  float:none;
+ .contentright {
+  float: right;
  }
  .ilust img {
   width: 100%;
   height: auto;
-  vertical-align: middle;
+  margin-top: 57px;
  }
  .pasoscontent {
   margin-top: 80px;
@@ -478,14 +477,14 @@
   text-decoration: none;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 0;
+  margin-top: 20px;
   background-color: #7f345d;
-  width: 60px;
-  padding: 12px;
+  width: 100px;
+  padding: 15px;
   border-radius: 5px;
   text-align: center;
   color: white;
-  font-size: 9px;
+  font-size: 11px;
   text-transform: uppercase;
   font-family: Montserrat;
   font-weight: 400;
@@ -501,68 +500,69 @@
   font-family: Volkohn;
   font-style: italic;
   font-size: 16px;
-  padding-left: 6.5%;
-  top: 6%;
+  padding-left: 8.5%;
+  top:13%;
   width: 6%;
-  float: left;
-  height: 100px;
+  float:left;
+height:100px;
  }
  .title-servicios {
   color: white;
   font-family: Volkohn;
   font-style: italic;
   font-size: 16px;
-  padding-left: 6.5%;
-  top: 15%;
+  padding-left: 8.5%;
+  top: 13%;
   width: 6%;
   float: left;
   position: absolute;
  }
  .clients {
-  height: 220px;
   background-color: #ededed;
   margin: 0 auto;
  }
  .footer {
-  height: 190px;
   background-color: black;
-  padding-top: 10px;
  }
  .footercontent {
+  display: inline-block;
   text-align: left;
   color: white;
-  margin-left: 10%;
+  margin: 19px;
+  width: 200px;
   clear: both;
-  margin-top: 10px;
  }
  .footertitle {
   color: white;
-  font-size: 12px;
+  font-size: 17px;
   text-transform: uppercase;
   font-weight: 700;
+  margin-top: 38px;
  }
  .footerrights {
   color: white;
-  font-size: 10px;
+  font-size: 12px;
   font-family: 'Volkhov';
+  bottom:75px;
+  right:100px;
  }
  .footertext {
   font-family: 'Nunito';
   color: white;
-  font-size: 10px;
+  font-size: 14px;
  }
  .footertext a {
   text-decoration: none;
   color: #c95854;
  }
  .client-container {
-  padding-top: 5%;
+  padding-top: 20%;
   right: 10px;
   margin-top: 70px;
-  margin-left: 90px;
+  margin-left: 120px;
  }
  .general-client {
-  width: 80px;
+  width: 130px;
   margin: 5px;
  }
  .row {
@@ -571,18 +571,18 @@
  }
  .rowproceso {
   width: 100%;
-  margin-top: 15%;
+  margin-top: 10%;
  }
  .row .image {
   float: none;
   display: inline-block;
   width: 100%;
-  height: 200px;
+  height: 300px;
   background-size: cover;
  }
  .contenidoTexto {
-  float: none;
-  width: 100%;
+  float: left;
+  width: 90%;
   display: inline-block;
  }
  .row .text {
@@ -614,40 +614,39 @@
   content: url('../img/cliente4.png');
  }
  .fullcontact {
-  height: 385px;
   background-color: #d27c49;
   margin: 0 auto;
   text-align: center;
   padding-top: 50px;
+  height: 640px;
  }
  .textform {
   width: 100%;
+ }
+ .textform h3 {
+  margin-bottom: -35px;
   text-align: center;
  }
  .container-fullcontact {
-  position: inherit;
-  width: 75%;
+  width: 80%;
   text-align: center;
-  display: block;
-  vertical-align: middle;
-  margin: 0 auto;
+  display: inline-block;
  }
  .fullform {
   font-family: 'Montserrat';
-  font-size: 9px;
+  font-size: 11px;
   color: #a85a2b;
-  margin-top: 20px;
-  display: block;
+  margin-top: 60px;
   text-align: left;
   text-transform: uppercase;
  }
  .fullform input {
   border-style: none;
-  width: 200px;
+  width: 100%;
   display: inline-block;
   background-color: #bb6938;
   margin: 5px;
-  height: 10px;
+  height: 20px;
   border-radius: 5px;
   padding: 5px;
   font-family: 'Nunito'
@@ -664,11 +663,12 @@
   font-family: 'Montserrat';
   font-weight: '700';
   color: white;
-  font-size: 10px;
+  font-size: 11px;
   text-transform: uppercase;
   cursor: pointer;
   line-height: 20px;
   margin-right: 30px;
+  margin-left: 40px;
  }
  .listado #servicio:hover {
   color: #c75156;
@@ -679,43 +679,44 @@
  .showimage {
   vertical-align: middle;
   display: inline-block;
-  width: 100px;
+  width: 130px;
   height: auto;
+  margin-left: 40px;
  }
  .showcontent {
+  text-align: left;
+  margin-top: 50px;
   width: 200px;
   height: auto;
-  margin-top: 50px;
-  text-align: left;
  }
  .title {
   font-family: 'Montserrat';
   font-weight: 700;
   color: white;
-  font-size: 30px;
+  font-size: 60px;
+  margin-left: 40px;
  }
  .subtitle {
   font-family: 'Montserrat';
   font-weight: 700;
   color: white;
-  font-size: 20px;
-  margin-top: 0px;
+  font-size: 35px;
+  margin-top: -10px;
   text-transform: uppercase;
-  margin-bottom: 0px;
+  margin-bottom: 20px;
+  margin-left: 40px;
  }
  .content {
-  width: 210px;
+  width: 250px;
   font-family: 'Nunito';
   font-weight: 300;
   color: white;
-  font-size: 11px;
+  font-size: 16px;
+  margin-left: 40px;
  }
  .sectionscontainer {
   margin: 0 auto;
-  width: 80%;
-  vertical-align: middle;
-  margin-top: 100px;
-  text-align: center;
+  width: 1400px;
  }
  .people {
   background-color: #1d3350;
@@ -724,28 +725,29 @@
   font-size: 30px;
  }
  .container50 {
-  vertical-align: middle;
+  vertical-align: 200%;
   text-align: center;
   position: relative;
-  width: 75%;
-  display: block;
-  margin: 0 auto;
-  margin-bottom: 35px;
+  width: 80%;
+  display: inline-block;
  }
  .rowpeople h1 {
-  margin-top: 80px;
-  margin-bottom: 50px;
-  font-size:20px;
+  margin-top: 108px;
+  margin-bottom: 25px;
+ }
+ .unete h1 {
+  margin-top: 0px;
  }
  .person h1 {
-  font-size: 15px;
+  font-size: 20px;
   margin-top: 10px;
+  margin-bottom: 0;
  }
  .person h3 {
   color: white;
   font-size: 15px;
-  margin-top: -45px;
-  margin-bottom: -5px;
+  margin: 0;
+  margin-top: 10px;
  }
  .person .text {
   margin-top: 0;
@@ -762,54 +764,19 @@
   color: white;
   text-align: center;
   display: inline-block;
-  width: 150px;
+  margin: 20px;
+  width: 250px;
   height: 250px;
-  margin-top:20px;
  }
- .person img{
-  width:100px;
- }
- .unetecontainer {
-  vertical-align: middle;
-  color: white;
-  text-align: center;
-  display: inline-block;
-  width: 150px;
- }
- .unete h1 {
-  font-size: 20px;
-  margin-top: 40px;
+ .person .unete h1 {
+  font-size: 30px;
+  margin-top: 25px;
+  margin-bottom: 20px;
  }
  .container50 .text h3 {
-  margin-bottom: -20px;
-  font-size: 12px;
+  margin-bottom: -30px;
  }
  .procesocontent .center h4 {
-  font-size: 20px;
- }
- .procesocontent .center h3 {
-  margin-bottom: -20px;
- }
- .center .text {
-  font-size: 11px;
-  margin-top: -20px;
- }
- .contentpasos h4 {
-  font-size: 20px;
- }
- .textform {
-  color: black;
- }
- .textform h3 {
-  margin-bottom: -25px;
- }
- .textform h4 {
-  color: black;
-  font-size: 20px;
-  margin
- }
- .textform p {
-  font-size: 12px;
-  margin-top: -25px;
+  margin: 20px;
  }
 }
