--- a/css/stablet.css
+++ b/css/stablet.css
@@ -9,7 +9,7 @@
  }
  .section.main h1 {
   color: white;
-  font-size: 38px;
+  font-size: 25px;
   width: 70%;
   text-transform: uppercase;
   margin-right: auto;
@@ -18,8 +18,8 @@
  }
  .section.mainproceso h1 {
   color: white;
-  font-size: 38px;
-  width: 60%;
+  font-size: 25px;
+  width: 70%;
   text-transform: uppercase;
   margin-right: auto;
   margin-left: auto;
@@ -47,7 +47,7 @@
  }
  h3 {
   font-family: Volkohn;
-  font-size: 18px;
+  font-size: 12px;
   color: #0f1230;
   font-weight: 300;
   font-style: italic;
@@ -77,7 +77,7 @@
  }
  .section.nosotros h5 {
   font-family: Volkohn;
-  font-size: 20px;
+  font-size: 12px;
   color: white;
   font-weight: 300;
   font-style: italic;
@@ -100,7 +100,7 @@
  }
  .section.mainnosotros h1 {
   color: white;
-  font-size: 40px;
+  font-size: 25px;
   width: 50%;
   text-transform: uppercase;
   margin-right: auto;
@@ -111,29 +111,29 @@
   font-family: Montserrat;
   font-weight: 700;
   color: white;
-  font-size: 41px;
+  font-size: 20px;
   margin-top: 55px;
  }
  .section.main {
   background-image: url('../assets/images/main_background.png');
-  background-repeat: no-repeat;
-  background-size: cover;
  }
  .logo {
   position: fixed;
-  top: 25px;
-  left: 40px;
+  width: 100px;
+  top: 35px;
+  left: 15px;
   z-index: 1;
  }
  .menu {
   position: fixed;
   padding: 20px;
   top: 20px;
-  right: 20px;
+  right: 0;
   z-index: 1;
   cursor: pointer;
  }
  .arrow {
+  width:15px;
   position: absolute;
   bottom: 40px;
   right: 50%;
@@ -152,7 +152,7 @@
   font-family: Montserrat;
   font-weight: 700;
   color: #0f1230;
-  font-size: 30px;
+  font-size: 20px;
   text-transform: uppercase;
  }
  .text h3 {
@@ -222,72 +222,70 @@
  }
  .text {
   font-family: 'Nunito';
-  font-size: 16px;
+  font-size: 11px;
+  margin-top: -28px;
  }
  .textnosotros {
   padding: 50px;
   vertical-align: middle;
   font-family: 'Nunito';
-  font-size: 16px;
+  font-size: 11px;
  }
  .textnosotros h1 {
   font-family: 'Montserrat';
-  margin-bottom: -40px;
+  margin-bottom: -30px;
   color: black;
-  font-size: 50px;
+  font-size: 30px;
+ }
+ .textnosotros h3 {
+  margin-top:-20px;
  }
  .textnosotros h4 {
   font-family: 'Montserrat';
-  margin-bottom: 0px;
   color: black;
-  font-size: 25px;
+  font-size: 20px;
+ }
+ .textnosotros p{
+  margin-top:-5px;
  }
  .textproceso {
   font-family: 'Nunito';
-  font-size: 16px;
-  margin-top: -33px;
+  font-size: 11px;
+  margin-top: -20px;
  }
  .button {
   text-decoration: none;
   margin-left: auto;
   margin-right: auto;
   background-color: #7f345d;
-  width: 90px;
-  padding: 25px;
+  width: 60px;
+  padding: 12px;
   border-radius: 5px;
   text-align: center;
   color: white;
-  font-size: 14px;
+  font-size: 9px;
   text-transform: uppercase;
   font-family: Montserrat;
   font-weight: 400;
   cursor: pointer;
+  margin-top: -100px;
  }
  .unetebtn {
   text-decoration: none;
   margin-left: auto;
   margin-right: auto;
   background-color: #7f345d;
-  width: 75px;
-  padding: 18px;
+  width: 60px;
+  padding: 12px;
   border-radius: 5px;
   text-align: center;
   color: white;
-  font-size: 11px;
+  font-size: 9px;
   text-transform: uppercase;
   font-family: Montserrat;
   font-weight: 400;
   cursor: pointer;
-  margin-top: -27px;
- }
- .uscontainer {
-  display: table;
- }
- .contentleft {
-  float: none;
- }
- .contentright {
-  float: none;
+  margin-top: -50px;
  }
  a {
   text-decoration: none;
@@ -306,12 +304,12 @@
   color: white;
   border: 2px solid white;
   border-radius: 5px;
-  font-size: 13px;
+  font-size: 9px;
   text-transform: uppercase;
   font-family: Montserrat;
   font-weight: 400;
-  padding: 20px;
-  width: 93px;
+  padding: 12px;
+  width: 60px;
   cursor: pointer;
  }
  .buttonwhite:hover {
@@ -330,7 +328,7 @@
   background-image: url('../img/nosotroscontent-img.png');
  }
  .center {
-  width: 72%;
+  width: 75%;
   text-align: center;
   margin-left: auto;
   margin-right: auto;
@@ -355,13 +353,13 @@
   z-index: 3;
  }
  .contactBtn {
-  right: 0;
+  right: -11px;
   display: none;
   position: absolute;
   color: white;
   z-index: 2;
   text-transform: uppercase;
-  font-size: 11px;
+  font-size: 10px;
   top: 50%;
   transform: rotate(90deg) translateY(50%);
   cursor: pointer;
@@ -407,27 +405,30 @@
  }
  .ilust {
   text-align: center;
-  width: 180px;
+  width: 100px;
   display: block;
   margin: 0 auto;
  }
- .ilustindex {
+ .ilustindex{
   width: 100px;
   display: inline-block;
  }
- .stepcontainer {
+ .stepcontainer{
   display: inline-block;
  }
- .contentleft {
-  float: left;
+ .uscontainer{
+  display: table;
  }
- .contentright {
-  float: right;
+ .contentleft{
+  float:none;
+ }
+ .contentright{
+  float:none;
  }
  .ilust img {
   width: 100%;
   height: auto;
-  margin-top: 57px;
+  vertical-align: middle;
  }
  .pasoscontent {
   margin-top: 80px;
@@ -477,14 +478,14 @@
   text-decoration: none;
   margin-left: auto;
   margin-right: auto;
-  margin-top: 20px;
+  margin-top: 0;
   background-color: #7f345d;
-  width: 100px;
-  padding: 15px;
+  width: 60px;
+  padding: 12px;
   border-radius: 5px;
   text-align: center;
   color: white;
-  font-size: 11px;
+  font-size: 9px;
   text-transform: uppercase;
   font-family: Montserrat;
   font-weight: 400;
@@ -500,69 +501,68 @@
   font-family: Volkohn;
   font-style: italic;
   font-size: 16px;
-  padding-left: 8.5%;
-  top:13%;
+  padding-left: 6.5%;
+  top: 6%;
   width: 6%;
-  float:left;
-height:100px;
+  float: left;
+  height: 100px;
  }
  .title-servicios {
   color: white;
   font-family: Volkohn;
   font-style: italic;
   font-size: 16px;
-  padding-left: 8.5%;
-  top: 13%;
+  padding-left: 6.5%;
+  top: 15%;
   width: 6%;
   float: left;
   position: absolute;
  }
  .clients {
+  height: 220px;
   background-color: #ededed;
   margin: 0 auto;
  }
  .footer {
+  height: 190px;
   background-color: black;
+  padding-top: 10px;
  }
  .footercontent {
-  display: inline-block;
   text-align: left;
   color: white;
-  margin: 19px;
-  width: 200px;
+  margin-left: 10%;
   clear: both;
+  margin-top: 10px;
  }
  .footertitle {
   color: white;
-  font-size: 17px;
+  font-size: 12px;
   text-transform: uppercase;
   font-weight: 700;
-  margin-top: 38px;
  }
  .footerrights {
   color: white;
-  font-size: 12px;
+  font-size: 10px;
   font-family: 'Volkhov';
-  bottom:75px;
-  right:100px;
  }
  .footertext {
   font-family: 'Nunito';
   color: white;
-  font-size: 14px;
+  font-size: 10px;
  }
  .footertext a {
   text-decoration: none;
   color: #c95854;
  }
  .client-container {
-  padding-top: 20%;
+  padding-top: 5%;
   right: 10px;
   margin-top: 70px;
-  margin-left: 120px;
+  margin-left: 90px;
  }
  .general-client {
-  width: 130px;
+  width: 80px;
   margin: 5px;
  }
  .row {
@@ -571,18 +571,18 @@ height:100px;
  }
  .rowproceso {
   width: 100%;
-  margin-top: 10%;
+  margin-top: 15%;
  }
  .row .image {
   float: none;
   display: inline-block;
   width: 100%;
-  height: 300px;
+  height: 200px;
   background-size: cover;
  }
  .contenidoTexto {
-  float: left;
-  width: 90%;
+  float: none;
+  width: 100%;
   display: inline-block;
  }
  .row .text {
@@ -614,39 +614,40 @@ height:100px;
   content: url('../img/cliente4.png');
  }
  .fullcontact {
+  height: 385px;
   background-color: #d27c49;
   margin: 0 auto;
   text-align: center;
   padding-top: 50px;
-  height: 640px;
  }
  .textform {
   width: 100%;
- }
- .textform h3 {
-  margin-bottom: -35px;
   text-align: center;
  }
  .container-fullcontact {
-  width: 80%;
+  position: inherit;
+  width: 75%;
   text-align: center;
-  display: inline-block;
+  display: block;
+  vertical-align: middle;
+  margin: 0 auto;
  }
  .fullform {
   font-family: 'Montserrat';
-  font-size: 11px;
+  font-size: 9px;
   color: #a85a2b;
-  margin-top: 60px;
+  margin-top: 20px;
+  display: block;
   text-align: left;
   text-transform: uppercase;
  }
  .fullform input {
   border-style: none;
-  width: 100%;
+  width: 200px;
   display: inline-block;
   background-color: #bb6938;
   margin: 5px;
-  height: 20px;
+  height: 10px;
   border-radius: 5px;
   padding: 5px;
   font-family: 'Nunito'
@@ -663,12 +664,11 @@ height:100px;
   font-family: 'Montserrat';
   font-weight: '700';
   color: white;
-  font-size: 11px;
+  font-size: 10px;
   text-transform: uppercase;
   cursor: pointer;
   line-height: 20px;
   margin-right: 30px;
-  margin-left: 40px;
  }
  .listado #servicio:hover {
   color: #c75156;
@@ -679,44 +679,43 @@ height:100px;
  .showimage {
   vertical-align: middle;
   display: inline-block;
-  width: 130px;
+  width: 100px;
   height: auto;
-  margin-left: 40px;
  }
  .showcontent {
-  text-align: left;
-  margin-top: 50px;
   width: 200px;
   height: auto;
+  margin-top: 50px;
+  text-align: left;
  }
  .title {
   font-family: 'Montserrat';
   font-weight: 700;
   color: white;
-  font-size: 60px;
-  margin-left: 40px;
+  font-size: 30px;
  }
  .subtitle {
   font-family: 'Montserrat';
   font-weight: 700;
   color: white;
-  font-size: 35px;
+  font-size: 20px;
   margin-top: -10px;
   text-transform: uppercase;
-  margin-bottom: 20px;
-  margin-left: 40px;
+  margin-bottom: 0px;
  }
  .content {
-  width: 250px;
+  width: 210px;
   font-family: 'Nunito';
   font-weight: 300;
   color: white;
-  font-size: 16px;
-  margin-left: 40px;
+  font-size: 11px;
  }
  .sectionscontainer {
   margin: 0 auto;
-  width: 1400px;
+  width: 80%;
+  vertical-align: middle;
+  margin-top: 100px;
+  text-align: center;
  }
  .people {
   background-color: #1d3350;
@@ -725,29 +724,28 @@ height:100px;
   font-size: 30px;
  }
  .container50 {
-  vertical-align: 200%;
+  vertical-align: middle;
   text-align: center;
   position: relative;
-  width: 80%;
-  display: inline-block;
+  width: 75%;
+  display: block;
+  margin: 0 auto;
+  margin-bottom: 35px;
  }
  .rowpeople h1 {
-  margin-top: 108px;
-  margin-bottom: 25px;
- }
- .unete h1 {
-  margin-top: 0px;
+  margin-top: 80px;
+  margin-bottom: 50px;
+  font-size:20px;
  }
  .person h1 {
-  font-size: 20px;
+  font-size: 15px;
   margin-top: 10px;
-  margin-bottom: 0;
  }
  .person h3 {
   color: white;
   font-size: 15px;
-  margin: 0;
-  margin-top: 10px;
+  margin-top: -45px;
+  margin-bottom: -5px;
  }
  .person .text {
   margin-top: 0;
@@ -764,19 +762,54 @@ height:100px;
   color: white;
   text-align: center;
   display: inline-block;
-  margin: 20px;
-  width: 250px;
+  width: 150px;
   height: 250px;
+  margin-top:20px;
  }
- .person .unete h1 {
-  font-size: 30px;
-  margin-top: 25px;
-  margin-bottom: 20px;
+ .person img{
+  width:100px;
+ }
+ .unetecontainer {
+  vertical-align: middle;
+  color: white;
+  text-align: center;
+  display: inline-block;
+  width: 150px;
+ }
+ .unete h1 {
+  font-size: 20px;
+  margin-top: 40px;
  }
  .container50 .text h3 {
-  margin-bottom: -30px;
+  margin-bottom: -20px;
+  font-size: 12px;
  }
  .procesocontent .center h4 {
-  margin: 20px;
+  font-size: 20px;
+ }
+ .procesocontent .center h3 {
+  margin-bottom: -20px;
+ }
+ .center .text {
+  font-size: 11px;
+  margin-top: -20px;
+ }
+ .contentpasos h4 {
+  font-size: 20px;
+ }
+ .textform {
+  color: black;
+ }
+ .textform h3 {
+  margin-bottom: -25px;
+ }
+ .textform h4 {
+  color: black;
+  font-size: 20px;
+  margin
+ }
+ .textform p {
+  font-size: 12px;
+  margin-top: -25px;
  }
 }
