--- a/css/tablet.css
+++ b/css/tablet.css
@@ -1,4 +1,4 @@
-@media screen and (min-width:481px) and (max-width:768px) {
+@media screen and (min-width:769px) and (max-width:1360px) {
  body {
   font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
  }
@@ -245,19 +245,26 @@
  .textproceso {
   font-family: 'Nunito';
   font-size: 16px;
-  margin-top: -33px;
+  width:80%;
+  margin:0 auto;
+  margin-top:-25px;
+  margin-bottom:40px;
+ }
+ .textprocesomain{
+  width:60%;
+  margin:0 auto;
  }
  .button {
   text-decoration: none;
   margin-left: auto;
   margin-right: auto;
   background-color: #7f345d;
-  width: 90px;
-  padding: 25px;
+  width: 70px;
+  padding: 20px;
   border-radius: 5px;
   text-align: center;
   color: white;
-  font-size: 14px;
+  font-size: 11px;
   text-transform: uppercase;
   font-family: Montserrat;
   font-weight: 400;
@@ -306,12 +313,12 @@
   color: white;
   border: 2px solid white;
   border-radius: 5px;
-  font-size: 13px;
+  font-size: 11px;
   text-transform: uppercase;
   font-family: Montserrat;
   font-weight: 400;
   padding: 20px;
-  width: 93px;
+  width: 70px;
   cursor: pointer;
  }
  .buttonwhite:hover {
@@ -412,7 +419,7 @@
   margin: 0 auto;
  }
  .ilustindex {
-  width: 100px;
+  width: 200px;
   display: inline-block;
  }
  .stepcontainer {
@@ -437,7 +444,7 @@
   margin: 10px;
   vertical-align: middle;
   color: #0f1230;
-  width: 200px;
+  width: 500px;
   display: inline-block;
   text-align: left;
   left: 0;
@@ -496,15 +503,14 @@
   background-color: #964973;
  }
  .title-clients {
+  float: left;
   color: #0f1230;
   font-family: Volkohn;
   font-style: italic;
   font-size: 16px;
-  padding-left: 8.5%;
-  top:13%;
+  margin-top: 10%;
+  margin-left:8.5%;
   width: 6%;
-  float:left;
-height:100px;
  }
  .title-servicios {
   color: white;
@@ -517,49 +523,58 @@ height:100px;
   float: left;
   position: absolute;
  }
- .clients {
+ .clients{
+  height:70%;
+  top:0;
+  overflow-y:auto;
+ }
+ .clientsnfooter {
   background-color: #ededed;
-  margin: 0 auto;
+text-align: center;
+ }
+ .client-container{
+  width:50%;
+  float:right;
+  margin-right:20%;
+  margin-top:10%;
  }
  .footer {
+  height: 30%;
   background-color: black;
- }
+  padding-top: 10px;
+  bottom:0;
+  overflow-y:auto;
+  }
  .footercontent {
-  display: inline-block;
+  float: left;
   text-align: left;
   color: white;
-  margin: 19px;
+  display: inline-block;
+  margin: 50px;
   width: 200px;
-  clear: both;
  }
  .footertitle {
   color: white;
-  font-size: 17px;
+  font-size: 15px;
   text-transform: uppercase;
   font-weight: 700;
-  margin-top: 38px;
  }
  .footerrights {
   color: white;
   font-size: 12px;
   font-family: 'Volkhov';
-  bottom:75px;
-  right:100px;
+  position: absolute;
+  bottom: 75px;
+  right: 100px
  }
  .footertext {
   font-family: 'Nunito';
   color: white;
-  font-size: 14px;
+  font-size: 12px;
  }
  .footertext a {
   text-decoration: none;
   color: #c95854;
- }
- .client-container {
-  padding-top: 20%;
-  right: 10px;
-  margin-top: 70px;
-  margin-left: 120px;
  }
  .general-client {
   width: 130px;
@@ -635,7 +650,7 @@ height:100px;
  .fullform {
   font-family: 'Montserrat';
   font-size: 11px;
-  color: #a85a2b;
+  color: #944211;
   margin-top: 60px;
   text-align: left;
   text-transform: uppercase;
@@ -649,14 +664,13 @@ height:100px;
   height: 20px;
   border-radius: 5px;
   padding: 5px;
-  font-family: 'Nunito'
+  font-family: 'Nunito';
  }
  /*Servicios*/
  .listado {
   display: inline-block;
   vertical-align: middle;
-  text-align: left;
-  height: 110px;
+  margin-left: 5%
  }
  .listado #servicio {
   vertical-align: middle;
@@ -667,8 +681,7 @@ height:100px;
   text-transform: uppercase;
   cursor: pointer;
   line-height: 20px;
-  margin-right: 30px;
-  margin-left: 40px;
+  margin-right: 150px;
  }
  .listado #servicio:hover {
   color: #c75156;
@@ -679,32 +692,31 @@ height:100px;
  .showimage {
   vertical-align: middle;
   display: inline-block;
-  width: 130px;
+  width: 250px;
   height: auto;
-  margin-left: 40px;
+  margin-right: 150px;
  }
  .showcontent {
-  text-align: left;
-  margin-top: 50px;
-  width: 200px;
-  height: auto;
+  vertical-align: middle;
+  display: inline-block;
+  width: 600px;
+  height: 200px;
+  margin-left:5%;
  }
  .title {
   font-family: 'Montserrat';
   font-weight: 700;
   color: white;
-  font-size: 60px;
-  margin-left: 40px;
+  font-size: 70px;
  }
  .subtitle {
   font-family: 'Montserrat';
   font-weight: 700;
   color: white;
-  font-size: 35px;
+  font-size: 40px;
   margin-top: -10px;
   text-transform: uppercase;
   margin-bottom: 20px;
-  margin-left: 40px;
  }
  .content {
   width: 250px;
@@ -712,11 +724,10 @@ height:100px;
   font-weight: 300;
   color: white;
   font-size: 16px;
-  margin-left: 40px;
  }
  .sectionscontainer {
   margin: 0 auto;
-  width: 1400px;
+  width: 768px;
  }
  .people {
   background-color: #1d3350;
