--- a/css/stablet.css
+++ b/css/stablet.css
@@ -1,4 +1,4 @@
-@media screen and (min-width:321px) and (max-width:480px) {
+@media screen and (min-width:321px) and (max-width:768px) {
  body {
   font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
  }
@@ -438,7 +438,7 @@
   margin: 10px;
   vertical-align: middle;
   color: #0f1230;
-  width: 200px;
+  width: 250px;
   display: inline-block;
   text-align: left;
   left: 0;
@@ -492,20 +492,20 @@
   cursor: pointer;
   border: 0;
   outline: 0;
+  margin-bottom:25px;
  }
  .buttonform:hover {
   background-color: #964973;
  }
  .title-clients {
+  float: left;
   color: #0f1230;
   font-family: Volkohn;
   font-style: italic;
   font-size: 16px;
-  padding-left: 6.5%;
-  top: 6%;
+  margin-top: 20%;
+  margin-left:8.5%;
   width: 6%;
-  float: left;
-  height: 100px;
  }
  .title-servicios {
   color: white;
@@ -518,16 +518,28 @@
   float: left;
   position: absolute;
  }
- .clients {
-  height: 220px;
+ .clients{
+  height:70%;
+  top:0;
+  overflow-y:auto;
+ }
+ .clientsnfooter {
   background-color: #ededed;
-  margin: 0 auto;
+text-align: center;
+ }
+ .client-container{
+  width:50%;
+  float:right;
+  margin-right:20%;
+  margin-top:20%;
  }
  .footer {
-  height: 190px;
+  height: 30%;
   background-color: black;
   padding-top: 10px;
- }
+  bottom:0;
+  overflow-y:auto;
+  }
  .footercontent {
   text-align: left;
   color: white;
@@ -554,12 +566,6 @@
  .footertext a {
   text-decoration: none;
   color: #c95854;
- }
- .client-container {
-  padding-top: 5%;
-  right: 10px;
-  margin-top: 70px;
-  margin-left: 90px;
  }
  .general-client {
   width: 80px;
@@ -614,7 +620,6 @@
   content: url('../img/cliente4.png');
  }
  .fullcontact {
-  height: 385px;
   background-color: #d27c49;
   margin: 0 auto;
   text-align: center;
@@ -635,7 +640,7 @@
  .fullform {
   font-family: 'Montserrat';
   font-size: 9px;
-  color: #a85a2b;
+  color: #944211;
   margin-top: 20px;
   display: block;
   text-align: left;
@@ -643,8 +648,7 @@
  }
  .fullform input {
   border-style: none;
-  width: 200px;
-  display: inline-block;
+  width: 100%;
   background-color: #bb6938;
   margin: 5px;
   height: 10px;
@@ -668,7 +672,7 @@
   text-transform: uppercase;
   cursor: pointer;
   line-height: 20px;
-  margin-right: 30px;
+  margin-right: 60px;
  }
  .listado #servicio:hover {
   color: #c75156;
@@ -679,7 +683,7 @@
  .showimage {
   vertical-align: middle;
   display: inline-block;
-  width: 100px;
+  width: 150px;
   height: auto;
  }
  .showcontent {
@@ -713,9 +717,6 @@
  .sectionscontainer {
   margin: 0 auto;
   width: 80%;
-  vertical-align: middle;
-  margin-top: 100px;
-  text-align: center;
  }
  .people {
   background-color: #1d3350;
@@ -801,7 +802,7 @@
   color: black;
  }
  .textform h3 {
-  margin-bottom: -25px;
+  margin-bottom: 0;
  }
  .textform h4 {
   color: black;
