--- a/css/tablet.css
+++ b/css/tablet.css
@@ -291,10 +291,10 @@
   display: table;
  }
  .contentleft {
-  float: none;
+  float: left;
  }
  .contentright {
-  float: none;
+  float: right;
  }
  a {
   text-decoration: none;
@@ -587,15 +587,12 @@ text-align: center;
   margin-top: 10%;
  }
  .row .image {
-  float: none;
-  display: inline-block;
-  width: 100%;
-  height: 300px;
+  width: 60%;
+  height: 100%;
   background-size: cover;
  }
  .contenidoTexto {
-  float: left;
-  width: 90%;
+  width: 40%;
   display: inline-block;
  }
  .row .text {
