--- a/css/main.css
+++ b/css/main.css
@@ -132,6 +132,7 @@
   }
   .section.main {
     background-image: url('../assets/images/main_background.png');
+    background-size: cover;
   }
   .logo {
     position: fixed;
@@ -290,6 +291,7 @@
   }
   .nosotros {
     background-image: url('../img/nosotros-img.png');
+    background-size: cover;
     height: 500px;
     text-align: center;
   }
@@ -318,9 +320,11 @@
   }
   .section.mainproceso {
     background-image: url('../img/proceso-img.png');
+    background-size: cover;
   }
   .section.mainnosotros {
     background-image: url('../img/nosotroscontent-img.png');
+    background-size: cover;
   }
   .center {
     width: 30%;
@@ -404,6 +408,9 @@
   }
   .ilustindex{
     width:350px;
+  }
+  .ilustproceso{
+    width:400px;
   }
   .stepcontainer{
     display:inline-block;
