Proyecto mejor organizado

--- a/css/main.css
+++ b/css/main.css
@@ -131,7 +131,7 @@
     margin-top: 55px;
   }
   .section.main {
-    background-image: url('../assets/images/main_background.png');
+    background-image: url('../img/main_background.png');
     background-size: cover;
   }
   .logo {
